<!--
  ~ Copyright (c) 2024 Sam Steele
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">LibreLinkUp for HealthConnect</string>
    <string name="title_activity_main">Login to LibreLinkUp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_url">Server</string>
    <string name="button_login">Login to LibreLinkUp</string>
    <string name="status_login">Enter your email address and password above to login to LibreLinkUp</string>
    <string name="battery_restricted">⚠️ This app is currently being restricted from running in the background</string>
    <string name="disable_battery_restrictions">Disable Battery Optimizations</string>
    <string-array name="api_endpoints">
        <item>https://api.libreview.io</item>
        <item>https://api-ae.libreview.io</item>
        <item>https://api-ap.libreview.io</item>
        <item>https://api-au.libreview.io</item>
        <item>https://api-ca.libreview.io</item>
        <item>https://api-de.libreview.io</item>
        <item>https://api-eu.libreview.io</item>
        <item>https://api-eu2.libreview.io</item>
        <item>https://api-fr.libreview.io</item>
        <item>https://api-jp.libreview.io</item>
        <item>https://api-us.libreview.io</item>
        <item>https://api-la.libreview.io</item>
        <item>https://api.libreview.ru</item>
        <item>https://api-cn.myfreestyle.cn</item>
    </string-array>
</resources>